fixed left align

--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body{
 }
 
 h1{
-    font-size: 3.4rem;
+    font-size: 3.5rem;
     color: #B39D76;
     text-align: center;
-    margin-top: 4em;
+    margin-top: 3em;
+    margin-bottom: 1em;
 }
 .container{
     background: #B39D76;
@@ -30,9 +31,14 @@ h1{
 }
 
 
+.labels{
+    margin: auto;
+    text-align: left; 
+    width: 420px;
+}
 .container-score{
-    margin: 2.5em 0em;
-   text-align: center; 
+    margin-top: 40px; 
+    
 }
 .far{
     color: #B39D76;
@@ -41,6 +47,7 @@ h1{
 label{
     font-size: 2em;
     color: #B39D76;
+    display: block;
    
 }
 button{
